--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,8 +10,8 @@ nav {
 
     /* background: #40be90; */
 
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
     height: 60px;
 
     position: absolute;
