--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,12 +8,10 @@ nav {
     justify-content: space-between;
     align-items: center;
     height: 60px;
-
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-
     transition: all .5s ease-in-out;
 }
 
@@ -34,9 +32,7 @@ h1 {
     margin-top: 0;
     margin-bottom: 0;
     margin-left: 10px;
-
     color: #4c545c;
-
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 36px;
 }
@@ -46,11 +42,8 @@ aside {
     top: 0;
     left: -260px;
     bottom: 0;
-
     width: 260px;
-
     background-color: #40be90;
-
     transition: all .5s ease-in-out;
 }
 
@@ -58,7 +51,7 @@ aside {
     left: 0;
 }
 
-.hide {
+.push {
     left: 260px;
     right: -260px;
 }
